<resources>
    <!-- fragment_email_password strings -->
    <string name="sign_in_emailpass">Sign in</string>
    <string name="signin_email_hint">Email</string>
    <string name="signin_password_hint">Password</string>
    <string name="signup_emailpass">Sign up</string>
    <string name="signup_username_hint">Username</string>
    <string name="signup_confirm_password_hint">Confirm your password</string>
    <string name="login_button">Sing In</string>
    <string name="signup_button">Sign Up</string>
    <string name="singup_message">If you are not registered ...</string>
    <string name="logout">Logout</string>

    <string name="app_name">TeamWork</string>

    <!-- chat and groups    -->
    <string name="send_button">Send</string>
    <string name="text_message_hint">Write here your message</string>
    <string name="group_name_label">Group name:</string>
    <string name="group_name_hint">Write the group name</string>
    <string name="group_description_label">Description</string>
    <string name="group_description_hint">Write a description for the group</string>
    <string name="create_new_group">Create</string>
    <string name="list_of_members">Group members</string>
    <string name="add_members_button">Add</string>
    <string name="remove_member_button">Remove</string>
    <string name="modify_group">Modify</string>
    <string name="delete_group">Delete</string>
    <string name="group_image_hint">Insert an image for your group</string>
    <string name="quit_group">Quit</string>
    <string name="refresh_list_groups">Sync</string>

</resources>