<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/group_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextGroupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/group_name_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toEndOf="@id/textView"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/group_description_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <EditText
        android:id="@+id/editTextGroupDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/group_description_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toEndOf="@id/textView2"
        app:layout_constraintTop_toBottomOf="@id/editTextGroupName"/>


    <EditText
        android:id="@+id/add_member_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <Button
        android:id="@+id/add_member_button"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:text="@string/add_members_button"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/add_member_editText"
        app:layout_constraintTop_toBottomOf="@+id/editTextGroupDescription" />

    <Button
        android:id="@+id/remove_member_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_member_button"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/add_member_button"
        app:layout_constraintTop_toBottomOf="@+id/editTextGroupDescription" />


    <TextView
        android:id="@+id/members_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_of_members"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_member_editText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/groupMembersRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/members_label" />


    <Button
        android:id="@+id/create_group_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_group"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>