<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/group_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_name_label"
        android:textSize="20sp"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/group_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/group_name_label"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/group_image"
        android:layout_width="72dp"
        android:layout_height="76dp"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_name_label"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/group_image_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/group_image_hint"
        app:layout_constraintBottom_toTopOf="@+id/group_members_recycle"
        app:layout_constraintStart_toEndOf="@+id/group_image"
        app:layout_constraintTop_toBottomOf="@+id/group_name"
        app:layout_constraintVertical_bias="0.32999998" />


    <TextView
        android:id="@+id/group_members_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/list_of_members"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_image" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/group_members_recycle"
        android:layout_width="match_parent"
        android:layout_height="590dp"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@+id/group_members_label"
        tools:layout_editor_absoluteX="1dp" />
</androidx.constraintlayout.widget.ConstraintLayout>